Update to support latest and Java 17