@@ -2,9 +2,9 @@ name := "Spark Stats"
 
 version := "1.0"
 
-scalaVersion := "2.13.10"
+scalaVersion := "2.13.13"
 
-val sparkVersion = "3.3.2"
+val sparkVersion = "3.5.1"
 
 scalacOptions ++= Seq(
   "-feature",
@@ -16,3 +16,11 @@ libraryDependencies ++= Seq(
 )
 
 Compile / run / fork := true
+
+javaOptions ++= Seq(
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
+)
